@@ -5,7 +5,6 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class AuthUtils {
 
@@ -13,14 +12,14 @@ public class AuthUtils {
             (Collection<? extends GrantedAuthority> authorities) {
         return authorities.stream()
                 .map(authority -> new SimpleGrantedAuthority(authority.getAuthority()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> extractRoles(Collection<? extends GrantedAuthority> authorities) {
         return authorities.stream()
                 .map(GrantedAuthority::getAuthority)
                 .map(authority -> authority.replace("ROLE_", ""))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
